--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -252,6 +252,18 @@
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugj-Kz-SXU">
+                                <rect key="frame" x="29" y="19" width="24" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="24" id="0F4-1y-Olz"/>
+                                    <constraint firstAttribute="height" constant="24" id="D6r-NQ-1ji"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button" image="nav_back_button"/>
+                                <connections>
+                                    <action selector="didTapBackButton:" destination="IVl-a4-4wN" eventType="touchUpInside" id="Gc5-EJ-sWB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="E1O-Pe-qwD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -259,6 +271,8 @@
                             <constraint firstAttribute="trailingMargin" secondItem="c0h-E4-2y2" secondAttribute="trailing" id="8B5-C2-mQh"/>
                             <constraint firstItem="c0h-E4-2y2" firstAttribute="leading" secondItem="GM7-Dl-k9b" secondAttribute="leadingMargin" id="ZAS-87-sfx"/>
                             <constraint firstAttribute="bottomMargin" secondItem="c0h-E4-2y2" secondAttribute="bottom" id="ewZ-1b-ExJ"/>
+                            <constraint firstItem="ugj-Kz-SXU" firstAttribute="top" secondItem="E1O-Pe-qwD" secondAttribute="top" constant="19" id="ijJ-Kl-e9M"/>
+                            <constraint firstItem="ugj-Kz-SXU" firstAttribute="leading" secondItem="GM7-Dl-k9b" secondAttribute="leadingMargin" constant="9" id="oyI-ja-cco"/>
                             <constraint firstItem="c0h-E4-2y2" firstAttribute="top" secondItem="GM7-Dl-k9b" secondAttribute="topMargin" id="whw-Zb-wZ4"/>
                         </constraints>
                     </view>
@@ -317,6 +331,7 @@
         <image name="Backward" width="24" height="24"/>
         <image name="Sharing" width="50" height="50"/>
         <image name="logo_of_unsplash" width="60" height="60"/>
+        <image name="nav_back_button" width="24" height="24"/>
         <image name="tab_editorial_active" width="30" height="30"/>
         <image name="tab_profile_active" width="30" height="30"/>
         <namedColor name="YP Black">
