--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -264,11 +264,18 @@
                                     <action selector="didTapBackButton:" destination="IVl-a4-4wN" eventType="touchUpInside" id="Gc5-EJ-sWB"/>
                                 </connections>
                             </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TCY-P4-3CZ">
+                                <rect key="frame" x="20" y="43" width="374" height="4"/>
+                                <color key="progressTintColor" name="YP Black"/>
+                            </progressView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="E1O-Pe-qwD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="TCY-P4-3CZ" secondAttribute="trailing" id="538-SP-7wi"/>
                             <constraint firstAttribute="trailingMargin" secondItem="c0h-E4-2y2" secondAttribute="trailing" id="8B5-C2-mQh"/>
+                            <constraint firstItem="TCY-P4-3CZ" firstAttribute="top" secondItem="ugj-Kz-SXU" secondAttribute="bottom" id="ChH-Th-8zK"/>
+                            <constraint firstItem="TCY-P4-3CZ" firstAttribute="leading" secondItem="GM7-Dl-k9b" secondAttribute="leadingMargin" id="Dha-mU-69G"/>
                             <constraint firstItem="c0h-E4-2y2" firstAttribute="leading" secondItem="GM7-Dl-k9b" secondAttribute="leadingMargin" id="ZAS-87-sfx"/>
                             <constraint firstAttribute="bottomMargin" secondItem="c0h-E4-2y2" secondAttribute="bottom" id="ewZ-1b-ExJ"/>
                             <constraint firstItem="ugj-Kz-SXU" firstAttribute="top" secondItem="E1O-Pe-qwD" secondAttribute="top" constant="19" id="ijJ-Kl-e9M"/>
